qualified_do/tests/failures/error_case02.stderr
error: Expected an expression or return statement at the last
 --> tests/failures/error_case02.rs:6:9
  |
6 |         x <- Some(5)
  |         ^^^^^^^^^^^^
